<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DigData Administrator</string>
    <string name="txtLogin">Login</string>
    <string name="txtPassword">Password</string>
    <string name="txtuserid">UserID</string>
    <string name="txtscreenlogo">BB VSLA Admin</string>
    <string name="txtdeliverKit">Deliver Kit</string>
    <string name="txtgeneratePasskey">Generate VSLA Passkey</string>
    <string name="txtdeliverKitTitle">Kit Delivery Info</string>
    <string name="vslaCode">VSLA Code:</string>
    <string name="vslaName">VSLA Name:</string>
    <string name="receivedBy">Received By:</string>
    <string name="chargeSetSerial">Charge Set Serial No.:</string>
    <string name="phoneNumber">Phone Number:</string>
    <string name="phoneImei">Phone IMEI:</string>
    <string name="phoneModel">Phone Model:</string>
    <string name="phoneType">Phone Type:</string>
    <string name="txtVslaSearch">Search</string>
    <string name="vslaIdPromptText">Please select VSLA from the list below</string>
    <string name="vslaPasskeyPromptText">Please write down the generated passkey and then click "Accept Key"</string>
    <string name="chargeSetManufacturer">ChargeSet Manufacturer:</string>
    <string name="acceptPasskey">Accept Key</string>
    <string name="passKey">Generated Passkey</string>
    <string name="titleLogin">LOGIN</string>
    <string name="txtEmailAddress">Email</string>
    <string name="labelSubmitForm">Submit Form</string>
    <string name="labelCancel">Cancel</string>
    <string name="vslaGPS">VSLA GPS Location:</string>
    <string name="labelGpsCapture">Record GPS Location</string>
    <string name="txtSave">Save</string>
    <string name="kitDeliveryTxt">Kit Delivery</string>
    <string name="generatePasskeyTxt">Generate Passkey</string>
    <string name="recordLocationTxt">Record Location</string>
    <string name="txtActivate">Activate</string>
    <string name="txtToken">Security Token</string>
    <string name="txtActivatePasswordPrompt">Please enter your password in the fields below.</string>
    <string name="txtConfirmPassword">Confirm Password</string>
    <string name="phoneSerialNumber">Phone Serial Number:</string>
    <string name="receivedByRole">Receiver\'s Role in Vsla:</string>

</resources>
