<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="10dp">

    <!--  View Title Label -->
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/txtActivatePasswordPrompt"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"/>

    <!--  Password Label -->
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/txtPassword"
            android:textSize="@dimen/text_size_medium"/>

    <!--  Password TextField -->
    <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_medium"/>

    <!--  Confirm Password Label -->
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/txtConfirmPassword"
            android:textSize="@dimen/text_size_medium"/>

    <!--  Confirm Password TextField -->
    <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_medium"/>

    <!--  Error message -->
    <TextView
            android:id="@+id/activation_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#e30000"
            android:padding="10dip"
            android:textStyle="bold"/>

    <!--  Login Button -->
    <Button
            android:id="@+id/btnActivatePassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtActivate"
            android:textSize="@dimen/text_size_medium"
            android:layout_gravity="bottom"/>

</LinearLayout>