<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <!-- android:background="#3b3b3b"> -->

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <!-- Consistent screen header-->
        <ViewStub
                android:id="@+id/vsHeader"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inflatedId="@+id/header"
                android:layout="@layout/header"/>

        <!-- Screen Design for VSLA Register -->
        <TextView
                android:id="@+id/deliverKitTitle"
                android:text="@string/deliverKitTitleText"
                style="@style/screenHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|top"/>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="36dp">
            <!--  VSLA ID Label -->
            <TextView
                    android:id="@+id/vslaIdText"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    style="@style/screenLabelText"
                    android:text="@string/vslaId"
                    android:layout_gravity="center"/>

            <TextView
                    android:id="@+id/vslaIdTxt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/text_size_medium"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="36dp">
            <!--  VSLA Name Label -->
            <TextView
                    android:id="@+id/vslaNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/screenLabelText"
                    android:text="@string/vslaName"
                    android:layout_gravity="center"/>

            <TextView
                    android:id="@+id/vslaNameTxt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_gravity="center|left"/>
        </TableRow>

        <!--  Phone Manufacturer Label -->
        <TextView
                android:id="@+id/phoneManufacturerText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/screenLabelText"
                android:text="@string/phoneType"/>

        <!--  Phone Manufacturer Spinner -->
        <Spinner
                android:id="@+id/phone_manufacturer_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/screenInputText"/>

        <!--  Phone Model Label -->
        <TextView
                android:id="@+id/phoneModelText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/screenLabelText"
                android:text="@string/phoneModel"/>

        <!--  Phone Model Spinner -->
        <Spinner
                android:id="@+id/phone_model_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/screenInputText"/>

        <!--  Phone IMEI Label -->
        <TextView
                android:id="@+id/phoneImeiText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/screenLabelText"
                android:text="@string/phoneImei"/>

        <!-- Phone IMEI Edit field -->
        <EditText
                android:id="@+id/phoneImei"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                style="@style/screenInputText"/>

        <!--  Phone Number Label -->
        <TextView
                android:id="@+id/phoneNumberText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/screenLabelText"
                android:text="@string/phoneNumber"/>

        <!-- Phone Number Input field -->
        <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/screenInputText"
                android:inputType="phone"/>

        <!--  ChargeSet Manufacturer Label -->
        <TextView
                android:id="@+id/chargeSetManufacturerText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/screenLabelText"
                android:text="@string/chargeSetManufacturer"/>

        <!--  ChargeSet Manufacturer Spinner -->
        <Spinner
                android:id="@+id/chargeset_manufacturer_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/screenInputText"/>

        <!--  Chargeset Serial Number Label -->
        <TextView
                android:id="@+id/chargeSetSerialText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/screenLabelText"
                android:text="@string/chargeSetSerial"/>

        <!-- Chargeset Serial Input field -->
        <EditText
                android:id="@+id/chargeSetSerial"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/screenInputText"
                android:inputType="text"/>

        <!--  Received by Label -->
        <TextView
                android:id="@+id/receivedByText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/screenLabelText"
                android:text="@string/receivedBy"/>

        <!--  Received by Spinner -->
        <EditText
                android:id="@+id/receivedBy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/screenInputText"
                android:inputType="text"/>

        <!--  Submit Button -->
        <Button
                android:id="@+id/deliver_kit_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/labelSubmit"/>

    </LinearLayout>
</ScrollView>