<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="10dp">

    <!--  View Title Label -->
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/txtActivate"
            android:textSize="25dp"
            android:textStyle="bold"/>

    <!--  Email Label -->
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtEmailAddress"
            android:textSize="@dimen/text_size_medium"/>

    <!--  Email TextField -->
    <EditText
            android:id="@+id/userName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_size_medium"/>

    <!--  Security Token Label -->
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/txtToken"
            android:textSize="@dimen/text_size_medium"/>

    <!--  Security Token TextField -->
    <EditText
            android:id="@+id/activationToken"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true"
            android:inputType="text"
            android:textSize="@dimen/text_size_medium"/>

    <!--  Error message -->
    <TextView
            android:id="@+id/activation_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#e30000"
            android:padding="10dip"
            android:textStyle="bold"/>

    <!--  Login Button -->
    <Button
            android:id="@+id/btnActivate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/txtActivate"
            android:textSize="@dimen/text_size_medium"/>

</LinearLayout>