<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <!-- Consistent screen header-->
    <ViewStub
            android:id="@+id/vsHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inflatedId="@+id/header"
            android:layout="@layout/header"/>

    <!-- Screen Design for VSLA Generate Passkey -->
    <TextView
            android:id="@+id/vslaPasskeyLabel"
            android:layout_width="fill_parent"
            android:layout_height="65dp"
            style="@style/screenLabelText"
            android:text="@string/vslaPasskeyPromptText"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginBottom="15dp"
            android:layout_gravity="top"/>

    <!-- VSLA ID Input field -->
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="50dp">

        <TextView
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:text="@string/vslaId"
                android:id="@+id/textViewVslaId"
                android:layout_gravity="center|left"
                android:textSize="@dimen/text_size_medium"/>

        <TextView
                android:layout_width="139dp"
                android:layout_height="50dp"
                android:id="@+id/vslaIdTxt"
                android:layout_gravity="center|left"
                android:layout_marginLeft="15dp"
                android:textSize="@dimen/text_size_medium"/>
    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="50dp">

        <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/passKey"
                android:id="@+id/textViewPassKey"
                android:layout_gravity="center|top"
                android:textSize="@dimen/text_size_medium"/>

        <TextView
                android:layout_width="139dp"
                android:layout_height="50dp"
                android:id="@+id/passKeyTxt"
                android:layout_gravity="center|left"
                android:textSize="@dimen/text_size_medium"
                android:layout_marginLeft="15dp"/>
    </TableRow>


    <Button
            android:id="@+id/accept_passkey_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/acceptPasskey"
            android:textSize="@dimen/text_size_medium"/>
    <!-- android:onClick="onClickSearch" -->


</LinearLayout>