<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/panelIconMain"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
        >

    <ViewStub
            android:id="@+id/vsHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inflatedId="@+id/header"
            android:layout="@layout/header"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="6dip">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearLayout1"
                android:layout_gravity="right|center_vertical">

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearLayout"
                android:layout_gravity="left|center_vertical">

        </LinearLayout>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="36dp">

            <TextView
                    android:layout_width="88dp"
                    android:layout_height="42dp"
                    android:text="@string/vslaCode"
                    android:id="@+id/textView"
                    android:layout_gravity="center"/>

            <TextView
                    android:layout_width="88dp"
                    android:layout_height="42dp"
                    android:id="@+id/vslaCodeTxt"
                    android:layout_gravity="center"/>
        </TableRow>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <!-- <TextView
                     android:id="@+id/deliver_kit_button"
                     style="@style/screenLabelText"
                     android:text="@string/deliverKit"
                     android:onClick="onClickDashboard"
                     android:layout_width="174dp"
                     android:layout_weight="0.43"/>   -->

            <Button
                    android:id="@+id/deliver_kit_button"
                    style="@style/dashboardButton"
                    android:text="@string/txtdeliverKit"
                    android:onClick="onClickDashboard"
                    android:layout_width="0dp"
                    android:layout_weight="0.43"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            <Button
                    android:id="@+id/generate_passkey_button"
                    style="@style/dashboardButton"
                    android:text="@string/txtgeneratePasskey"
                    android:onClick="onClickDashboard"
                    android:layout_width="0dp"
                    android:layout_weight="0.43"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>